force-app/main/default/objects/Payment_Milestone__c/Payment_Milestone__c.object-meta.xml
<CustomObject>
    <label>Payment Milestone</label>
    <nameField>
        <displayFormat>ML-{0000}</displayFormat>
        <label>Runawal Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Milestone</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>