force-app/main/default/objects/Payment_Milestone__c/fields/Construction_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Construction_Milestone__c</fullName>
    <label>Construction Milestone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>