force-app/main/default/objects/Payment_Milestone__c/fields/Day_Month_value__c.field-meta.xml
<CustomField>
    <fullName>Day_Month_value__c</fullName>
    <label>Day Month value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>