force-app/main/default/objects/Payment_Milestone__c/fields/DayMonth__c.field-meta.xml
<CustomField>
    <fullName>DayMonth__c</fullName>
    <label>DayMonth</label>
    <length>50</length>
    <type>Text</type>
</CustomField>