force-app/main/default/objects/Payment_Milestone__c/fields/Is_to_be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_to_be_Paid__c</fullName>
    <label>Is to be Paid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>