force-app/main/default/objects/Payment_Milestone__c/fields/Project_Stage__c.field-meta.xml
<CustomField>
    <fullName>Project_Stage__c</fullName>
    <label>Project Stage</label>
    <length>250</length>
    <type>Text</type>
</CustomField>